--- a/TorboFile/Properties/Resources.resx
+++ b/TorboFile/Properties/Resources.resx
@@ -117,8 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CATEGORY_DELETE_HEADER" xml:space="preserve">
+    <value>Confirm Delete</value>
+  </data>
+  <data name="CATEGORY_DELETE_PROMPT" xml:space="preserve">
+    <value>Are you sure you want to delete this category?</value>
+  </data>
   <data name="SEARCH_FILE_EXTENSION" xml:space="preserve">
     <value>tsrch</value>
     <comment>File extension for saving custom searches.</comment>
+  </data>
+  <data name="SET_DELETE_HEADER" xml:space="preserve">
+    <value>Confirm Delete</value>
+  </data>
+  <data name="SET_DELETE_PROMPT" xml:space="preserve">
+    <value>Are you sure you want to delete this set?</value>
   </data>
 </root>
