--- a/TorboFile/Properties/CustomSearchStrings.resx
+++ b/TorboFile/Properties/CustomSearchStrings.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="action_delete_msg" xml:space="preserve">
+  <data name="ACTION_DELETE_MSG" xml:space="preserve">
     <value>Matched Files and Directories will be deleted. This action cannot be undone.</value>
   </data>
   <data name="action_empty_recycle_msg" xml:space="preserve">
@@ -168,6 +168,9 @@
   </data>
   <data name="is_file_include" xml:space="preserve">
     <value>Directories will be excluded from the search results.</value>
+  </data>
+  <data name="LOAD_SEARCH_MSG" xml:space="preserve">
+    <value>Load Search...</value>
   </data>
   <data name="match_count_max_prompt" xml:space="preserve">
     <value>Max Files:</value>
@@ -223,5 +226,11 @@
   </data>
   <data name="match_size_min_prompt" xml:space="preserve">
     <value>Min Size (bytes):</value>
+  </data>
+  <data name="SAVE_SEARCH_MSG" xml:space="preserve">
+    <value>Save Search...</value>
+  </data>
+  <data name="SEARCH_DIR_PROMPT" xml:space="preserve">
+    <value />
   </data>
 </root>
