--- a/TorboFile/Properties/Resources.resx
+++ b/TorboFile/Properties/Resources.resx
@@ -123,14 +123,32 @@
   <data name="CATEGORY_DELETE_PROMPT" xml:space="preserve">
     <value>Are you sure you want to delete this category?</value>
   </data>
+  <data name="CLEAN_FOLDERS_SECTION" xml:space="preserve">
+    <value>Clean Folders</value>
+  </data>
+  <data name="CUSTOM_SEARCH_SECTION" xml:space="preserve">
+    <value>Custom Search</value>
+  </data>
+  <data name="DIR_NO_EXIST_ERR" xml:space="preserve">
+    <value>Error: Directory does not exist.</value>
+  </data>
+  <data name="FIND_COPIES_SECTION" xml:space="preserve">
+    <value>Find Duplicates</value>
+  </data>
   <data name="SEARCH_FILE_EXTENSION" xml:space="preserve">
     <value>tsrch</value>
     <comment>File extension for saving custom searches.</comment>
+  </data>
+  <data name="SETTINGS_TOOLTIP" xml:space="preserve">
+    <value>Settings</value>
   </data>
   <data name="SET_DELETE_HEADER" xml:space="preserve">
     <value>Confirm Delete</value>
   </data>
   <data name="SET_DELETE_PROMPT" xml:space="preserve">
     <value>Are you sure you want to delete this set?</value>
+  </data>
+  <data name="SORT_FILES_SECTION" xml:space="preserve">
+    <value>Sort Files</value>
   </data>
 </root>
