--- a/TorboFile/Properties/CustomSearchStrings.resx
+++ b/TorboFile/Properties/CustomSearchStrings.resx
@@ -163,10 +163,10 @@
   <data name="exclude_tip" xml:space="preserve">
     <value>If checked, only items that do NOT match this requirement will be included in results.</value>
   </data>
-  <data name="is_file_exclude" xml:space="preserve">
+  <data name="IS_FILE_EXCLUDE" xml:space="preserve">
     <value>Only directories will be included in the search results.</value>
   </data>
-  <data name="is_file_include" xml:space="preserve">
+  <data name="IS_FILE_INCLUDE" xml:space="preserve">
     <value>Directories will be excluded from the search results.</value>
   </data>
   <data name="LOAD_SEARCH_MSG" xml:space="preserve">
@@ -176,7 +176,7 @@
     <value>Max Files:</value>
   </data>
   <data name="match_count_max_tip" xml:space="preserve">
-    <value>Directories containing more files will not be matched."</value>
+    <value>Directories containing more files will not be matched.</value>
   </data>
   <data name="match_count_min_prompt" xml:space="preserve">
     <value>Min Files:</value>
@@ -185,7 +185,7 @@
     <value>Directories containing fewer files will not be matched.</value>
   </data>
   <data name="match_count_prompt" xml:space="preserve">
-    <value>Match directories which contain a given number of sub-files. Files are also matched, unless a Directory-Only condition is added.</value>
+    <value>Match directories which contain a given number of sub-files. Files are also included in the search, unless a Directory-Only condition is added.</value>
   </data>
   <data name="match_count_subdir_opt" xml:space="preserve">
     <value>Subdirectories count against total.</value>
@@ -232,5 +232,35 @@
   </data>
   <data name="SEARCH_DIR_PROMPT" xml:space="preserve">
     <value />
+  </data>
+  <data name="MATCH_COUNT_EXCLUDE" xml:space="preserve">
+    <value>Directories with the given number of sub-files will be excluded from search results.</value>
+  </data>
+  <data name="MATCH_COUNT_INCLUDE" xml:space="preserve">
+    <value>Directories with the given number of sub-files will be included in search results.</value>
+  </data>
+  <data name="MATCH_EXT_EXCLUDE" xml:space="preserve">
+    <value>Files with these extensions will not be included in the search.</value>
+  </data>
+  <data name="MATCH_EXT_INCLUDE" xml:space="preserve">
+    <value>Files with these extensions will be included in the search. Directories are also allowed.</value>
+  </data>
+  <data name="MATCH_NAME_EXCLUDE" xml:space="preserve">
+    <value>Files and directories with names containing the given string will be excluded from the search.</value>
+  </data>
+  <data name="MATCH_NAME_INCLUDE" xml:space="preserve">
+    <value>Files and directories with names containing the given string will be included in the search.</value>
+  </data>
+  <data name="MATCH_REG_EXCLUDE" xml:space="preserve">
+    <value>Files and directories matching the regular expression will be excluded from search results.</value>
+  </data>
+  <data name="MATCH_REG_INCLUDE" xml:space="preserve">
+    <value>Only files and directories matching the regular expression will be included in the search.</value>
+  </data>
+  <data name="MATCH_SIZE_EXCLUDE" xml:space="preserve">
+    <value>Excludes any files in the given size range. Directories are also matched unless a File-Only condition is added.</value>
+  </data>
+  <data name="MATCH_SIZE_INCLUDE" xml:space="preserve">
+    <value>Limits the search to files in the given size range. Directories are also matched unless a File-Only condition is added.</value>
   </data>
 </root>
